# FractalRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/fractal/: colorPalette.hpp  coloringAlgorithms.hpp  debug.hpp  fractal.hpp  fractalRenderer.hpp  genericFractal.hpp  history.hpp  juliaSet.hpp  mainWindow.hpp  mandelbrot.hpp  newton.hpp  openglUtils.hpp  renderConfig.hpp
settings/: settings.json
shaders/: genericVertex.vert  mandelbrotFrag.frag  mandelbrotFrag2.frag
shaders/optimised/: genericVertex.vert  mandelbrotFrag.frag
src/: colorPalette.cpp  coloringAlgorithms.cpp  debug.cpp  fractalRenderer.cpp  genericFractal.cpp  history.cpp  juliaSet.cpp  mainWindow.cpp  mandelbrot.cpp  newton.cpp  openglUtils.cpp  renderConfig.cpp
writeup/: bibliography.bib  codeListing.tex  design.tex  fractalRenderer.aux  fractalRenderer.bbl  fractalRenderer.blg  fractalRenderer.out  fractalRenderer.synctex(busy)  fractalRenderer.tex  fractalRenderer.toc  preamble.tex  programReflections.tex  programTesting.tex  projectAnalysis.tex  titlePage.tex
